--- a/Desafios/10_Segunda-Entrega-Proyecto-Final/public/css/styles.css
+++ b/Desafios/10_Segunda-Entrega-Proyecto-Final/public/css/styles.css
@@ -19,7 +19,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     transition: 0.2s;
@@ -36,115 +35,144 @@ body {
 
 main {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     justify-content: flex-start;
-    margin: 100px 0 60px 0;
     width: 100%;
 }
 
-main .secction__tarjetas {
-    background-color: var(--ColorClaro);
+main .contenedor__titulo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-main .opciones {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 300px;
-    font-size: 1rem;
     text-align: center;
-    border: 1px solid var(--ColorGris);
-    border-radius: 10px;
     padding: 20px;
-    margin: 0 40px 0 40px;
 }
 
-main .superior-resultados {
-    padding: 20px;
-    border: 1px solid var(--ColorGris);
-    border-radius: 10px;
-}
-
-main .superior-resultados h1 {
+main .contenedor__titulo h1 {
     color: var(--ColorNaranja);
     margin: 5px;
+    font-size: x-large;
 }
 
-main .superior-resultados .text {
+main .contenedor__titulo .text {
     margin: 5px;
     margin-bottom: 10px;
 }
 
-main .superior-resultados .contenedor__opciones {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-}
-
-main .superior-resultados .contenedor__opciones button {
+main .contenedor__titulo .tarjeta__btn {
     align-self: center;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     color: var(--ColorClaro);
-    height: 40px;
-    width: 140px;
-    background-color: var(--ColorGrisObscuro);
+    height: 50px;
+    width: 180px;
+    background-color: var(--ColorNaranja);
     border-radius: 5px;
     border: none;
-    font-size: 14px;
-    padding: 15px;
-    margin: 5px;
+    font-size: 16px;
+    margin-top: 10px;
 }
 
-main .superior-resultados .contenedor__opciones button:hover {
-    background-color: var(--ColorObscuro);
+main .contenedor__titulo .tarjeta__btn:hover {
+    background-color: #fc291a;
     box-shadow: 0px 0px 18px var(--ColorGris);
     cursor: pointer;
 }
 
-.contenedor__opciones button img {
-    width: 24px;
-}
-
-main aside p {
-    align-self: flex-start;
-    margin-bottom: 20px;
-}
-
-main aside ul {
-    align-self: flex-start;
-}
-
-main aside ul li {
+.btn__contenedor__administrador {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20px;
 }
 
-main aside ul li input {
-    margin-right: 20px;
+[class^='btn__administrador'] {
+    text-decoration: none;
+    color: var(--ColorGrisObscuro);
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    text-align: center;
+    border: 1px solid var(--ColorGris);
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin: 5px 0;
 }
 
-main aside ul li img {
-    margin-right: 10px;
+[class^='btn__administrador'] * {
+    margin: 10px;
+}
+
+[class^='btn__administrador'] ion-icon {
+    font-size: x-large;
+    margin-left: 0;
+}
+
+[class^='btn__administrador']:hover ion-icon {
+    color: var(--ColorNaranja);
+}
+
+[class^='btn__administrador']:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 10px var(--ColorGris);
+}
+
+.resultados {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
 }
 
 /* Estilos para las tarjetas */
 
 [class^='ON-tarjetaComponent'] {
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     list-style: none;
-    padding: 10px;
-    width: 300px;
+    background-color: var(--ColorClaro);
+    padding: 20px;
+    z-index: 1;
+}
+
+[class^='ON-tarjetaComponent']::-webkit-scrollbar {
+    width: 7px;
+}
+
+[class^='ON-tarjetaComponent']::-webkit-scrollbar-thumb {
+    background-color: var(--ColorGris);
+    border-radius: 5px;
+    height: 70%;
+}
+
+.btn-abrir__get-product-id,
+.btn-abrir__post-product,
+.btn-abrir__put-product {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    background-color: none;
+    border: none;
+    font-size: x-large;
+}
+
+.btn-abrir__get-product-id:hover,
+.btn-abrir__post-product:hover,
+.btn-abrir__put-product:hover {
+    color: var(--ColorNaranja);
+    cursor: pointer;
 }
 
 .tarjeta__link-img img {
@@ -164,6 +192,7 @@ main aside ul li img {
 }
 
 .tarjeta__link-title h1 {
+    text-align: center;
     font-size: 18px;
     color: var(--ColorNaranja);
 }
@@ -193,27 +222,6 @@ main aside ul li img {
     margin-right: 30px;
 }
 
-.tarjeta__btn {
-    align-self: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: var(--ColorClaro);
-    height: 50px;
-    width: 180px;
-    background-color: var(--ColorNaranja);
-    border-radius: 5px;
-    border: none;
-    font-size: 16px;
-    margin-top: 30px;
-}
-
-.tarjeta__btn:hover {
-    background-color: #fc291a;
-    box-shadow: 0px 0px 18px var(--ColorGris);
-}
-
 /* Estilos para los formularios de las tarjetas */
 
 .tarjeta__form {
@@ -225,7 +233,7 @@ main aside ul li img {
 .tarjeta__form label {
     display: flex;
     flex-direction: column;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .tarjeta__form label input {
@@ -233,7 +241,6 @@ main aside ul li img {
     height: 45px;
     padding: 0 5px;
     background-color: var(--ColorGris);
-    color: var(--ColorClaro);
     border-radius: 5px;
     border: 1px solid var(--ColorGris);
 }
@@ -266,16 +273,7 @@ main aside ul li img {
 .tarjeta__form button:hover {
     background-color: #fc291a;
     box-shadow: 0px 0px 18px var(--ColorGris);
-}
-
-/* Estilos para los selectores */
-
-.opciones ul {
-    list-style: none;
-}
-
-.opciones ul li img {
-    width: 30px;
+    cursor: pointer;
 }
 
 /* Estilos de ocultar y mostrar tarjetas */
@@ -394,7 +392,9 @@ main aside ul li img {
     margin: 5px 0;
 }
 
-.btn__producto__carrito {
+.btn__producto__carrito,
+.btn__producto__editar,
+.btn__producto__eliminar {
     width: 3rem;
     height: 3rem;
     font-size: x-large;
@@ -403,7 +403,9 @@ main aside ul li img {
     background-color: var(--ColorClaro);
 }
 
-.btn__producto__carrito:hover {
+.btn__producto__carrito:hover,
+.btn__producto__editar:hover,
+.btn__producto__eliminar:hover {
     cursor: pointer;
     box-shadow: 0px 0px 10px var(--ColorGris);
     color: var(--ColorNaranja);
@@ -459,29 +461,6 @@ main aside ul li img {
     box-shadow: 0px 0px 18px var(--ColorGris);
 }
 
-/* Estilos para boton de retornar */
-
-.btn__return {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 4rem;
-    height: 4rem;
-    font-size: 2.5rem;
-    background-color: var(--ColorClaro);
-    color: var(--ColorNaranja);
-    border: none;
-    border-radius: 50%;
-    box-shadow: 0px 0px 7px var(--ColorGrisObscuro);
-}
-
-.productos {
-    grid-template-columns: auto auto;
-}
-
 /* Estilos para toolbar */
 
 .tool_bar {
@@ -501,6 +480,7 @@ main aside ul li img {
     background-color: var(--ColorClaro);
     height: 70%;
     width: 90%;
+    max-width: 500px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px var(--ColorGrisObscuro);
 }
@@ -568,4 +548,76 @@ main aside ul li img {
 .tarjeta__info p {
     text-align: center;
     align-self: center;
+}
+
+@media (min-width: 600px) {
+    .productos {
+        grid-template-columns: auto auto;
+    }
+
+    .secction__tarjetas {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    [class^='ON-tarjetaComponent'] {
+        flex-direction: row;
+        top: 5%;
+        left: auto;
+        width: 420px;
+        max-height: 100vh;
+        height: auto;
+        border-radius: 10px;
+        border: 1px solid var(--ColorGrisObscuro);
+        padding: 0;
+    }
+}
+
+@media (min-width: 800px) {
+    .tool_bar {
+        top: 0;
+        left: 0;
+        max-height: 500px;
+        width: 4rem;
+        height: 100%;
+    }
+
+    .tool_bar__container {
+        flex-direction: column;
+        left: 50px;
+        border-radius: 0 10px 10px 0;
+        box-shadow: 0px 0px 5px var(--ColorGrisObscuro);
+    }
+
+    [class^='tool_btn'] {
+        top: 0;
+        left: 20px;
+        width: 60px;
+        height: 60px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .productos {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+@media (min-width: 1440px) {
+    .productos {
+        grid-template-columns: auto auto auto auto;
+    }
+}
+
+@media (min-width: 1920px) {
+    .productos {
+        grid-template-columns: auto auto auto auto auto;
+    }
+}
+
+@media (max-height: 700px) {
+    [class^='ON-tarjetaComponent'] {
+        bottom: 5%;
+    }
 }
