--- a/Desafios/11_Mocks-Normalización/views/index.hbs
+++ b/Desafios/11_Mocks-Normalización/views/index.hbs
@@ -28,14 +28,14 @@
 </div>
 
 <div id='chat'>
-    <h1>Centro de mensajes</h1>
+    <h1>Centro de mensajes <span class='porcentaje'></span> </h1>
     <form id='form-chat' action='' method='get'>
         <input type='email' id='input-email' name='correo' placeholder='Correo electronico' required />
-        <input type='name' id='input-nombre' name='nombre' placeholder='Nombre' required />
+        <input type='name' id='input-nombreChat' name='nombre' placeholder='Nombre' required />
         <input type='lastname' id='input-apellido' name='apellido' placeholder='Apellido' required />
         <input type='age' id='input-edad' name='edad' placeholder='Edad' required />
         <input id='input-alias' name='alias' placeholder='Alias' required />
-        <input id='input-avatar' name='avatar' placeholder='Avatar' required />
+        <input id='input-avatar' name='avatar' placeholder='Avatar (URL de la imagen)' required />
         <ul id='chat__contenedor'></ul>
         <div class='chat__inferior'>
             <span id='estado-escritura'></span>
