--- a/Desafios/13_Login_registrer/views/login.hbs
+++ b/Desafios/13_Login_registrer/views/login.hbs
@@ -2,13 +2,13 @@
     Iniciar sesión
 </h3>
 <form class='login-registrer__form'>
-    <label for='usermane'>
-        <span>User Name</span>
-        <input type='username' id='username' placeholder='Tu nombre' required />
+    <label for='email'>
+        <span>Correo electronico</span>
+        <input type='email' id='email' placeholder='example@mail.com' required />
     </label>
     <label for='password'>
-        <span>Password</span>
-        <input type='password' id='password' placeholder='Tu nombre' required />
+        <span>Contraseña</span>
+        <input type='password' id='password' placeholder='* * * * * *' required />
     </label>
     <a href="/registrer">¿Registrarse?</a> 
     <br/>
@@ -17,21 +17,24 @@
 </form>
 
 <script>
-    const inputForm = document.getElementById('username');
+    const inputForm = document.getElementById('email');
     const inputFormPassword = document.getElementById('password');
     const btnSubmit = document.getElementById('btn');
 
     btnSubmit.addEventListener('click', async (event)=>{
+        event.preventDefault()
+
         const optionsPOST = {
         method: 'POST',
-        body: JSON.stringify({username: inputForm.value, password: inputFormPassword.value}),
+        body: JSON.stringify({email: inputForm.value, password: inputFormPassword.value}),
         headers: {
             'Content-Type': 'application/json',
         },
     };
 
     await fetch('/login', optionsPOST)
-        .then((res) => res.json())
-        .then((response) => console.log(response));
+        .then((res) =>  {
+            window.location.href = res.url;
+        });
     })
 </script>
