--- a/Desafios/14_Objeto-process/views/index.hbs
+++ b/Desafios/14_Objeto-process/views/index.hbs
@@ -33,13 +33,31 @@
 
 <div id='chat'>
     <h1>Centro de mensajes <span class='porcentaje'></span> </h1>
+
+    <img id="input-avatar" src={{{avatar}}} alt="Este es el avatar de usuario" value={{{avatar}}}>
+    <ul>
+        <li>
+            <strong>Correo: </strong> 
+            <span id="input-email">{{{correo}}}</span> 
+        </li>
+        <li>
+            <strong>Nombre: </strong> 
+            <span id="input-nombreChat">{{{nombre}}}</span> 
+        </li>
+        <li>
+            <strong>Apellido: </strong>
+            <span id="input-apellido">{{{apellido}}}</span> 
+        </li>
+        <li>
+            <strong>Edad: </strong> 
+            <span id="input-edad">{{{edad}}}</span> 
+        </li>
+        <li>
+            <strong>Alias: </strong>
+            <span id="input-alias">{{{alias}}}</span>
+        </li>
+    </ul>
     <form id='form-chat' action='' method='get'>
-        <input type='email' id='input-email' name='correo' placeholder='Correo electronico' required />
-        <input type='name' id='input-nombreChat' name='nombre' placeholder='Nombre' required />
-        <input type='lastname' id='input-apellido' name='apellido' placeholder='Apellido' required />
-        <input type='age' id='input-edad' name='edad' placeholder='Edad' required />
-        <input id='input-alias' name='alias' placeholder='Alias' required />
-        <input id='input-avatar' name='avatar' placeholder='Avatar (URL de la imagen)' required />
         <ul id='chat__contenedor'></ul>
         <div class='chat__inferior'>
             <span id='estado-escritura'></span>
@@ -78,6 +96,8 @@ body .tarjeta__info {
 body #chat {
     position: fixed;
     right: 50px;
+    display: flex;
+    flex-direction: column;
     margin-left: 5vw;
     width: 30%;
 }
@@ -137,6 +157,12 @@ img {
 #estado-escritura p {
     font-size: small;
     color: #00b7ff;
+}
+
+#input-avatar {
+    align-self: center;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
 
 @media (max-width: 800px) {
@@ -228,18 +254,21 @@ img {
     // Enviar chat
     formChat.addEventListener('submit', (eventFormChat) => {
         eventFormChat.preventDefault();
+
         let message = {
             author: {
-                id: inputCorreo.value,
-                nombre: inputNombreChat.value,
-                apellido: inputApellido.value,
-                edad: inputEdad.value,
-                alias: inputAlias.value,
-                avatar: inputAvatar.value,
+                id: inputCorreo.innerHTML,
+                nombre: inputNombreChat.innerHTML,
+                apellido: inputApellido.innerHTML,
+                edad: inputEdad.innerHTML,
+                alias: inputAlias.innerHTML,
+                avatar: inputAvatar.src,
             },
             text: inputMensaje.value,
             hora: now,
         };
+
+        inputMensaje.value = "";
 
         socket.emit('getChat', message);
     });
@@ -252,7 +281,7 @@ img {
 
     inputMensaje.addEventListener('keyup', () => {
         let dataTeclear = {
-            correo: inputCorreo.value,
+            correo: inputCorreo.innerHTML,
             estado: true,
         };
 
