--- a/Desafios/14_Objeto-process/views/login.hbs
+++ b/Desafios/14_Objeto-process/views/login.hbs
@@ -1,29 +1,40 @@
 <h3 class='login-registrer__title'>
     Iniciar sesión
 </h3>
-<form class='login-registrer__form' action='/aplication'>
+<form class='login-registrer__form'>
     <label for='email'>
-        <span>Nombre</span>
-        <input type='name' id='name' placeholder='Tu nombre' required />
+        <span>Correo electronico</span>
+        <input type='email' id='email' placeholder='example@mail.com' required />
     </label>
+    <label for='password'>
+        <span>Contraseña</span>
+        <input type='password' id='password' placeholder='* * * * * *' required />
+    </label>
+    <a href="/registrer">¿Registrarse?</a> 
+    <br/>
+    <br/>
     <button id="btn" type='submit'>Ingresar</button>
 </form>
 
 <script>
-    const inputForm = document.getElementById('name');
+    const inputForm = document.getElementById('email');
+    const inputFormPassword = document.getElementById('password');
     const btnSubmit = document.getElementById('btn');
 
     btnSubmit.addEventListener('click', async (event)=>{
+        event.preventDefault()
+
         const optionsPOST = {
         method: 'POST',
-        body: JSON.stringify({username: inputForm.value}),
+        body: JSON.stringify({email: inputForm.value, password: inputFormPassword.value}),
         headers: {
             'Content-Type': 'application/json',
         },
     };
 
     await fetch('/login', optionsPOST)
-        .then((res) => res.json())
-        .then((response) => console.log(response));
+        .then((res) =>  {
+            window.location.href = res.url;
+        });
     })
 </script>
